--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,32 +13,9 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralWidget">
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="Location" name="widget" native="true"/>
-    </item>
-    <item row="0" column="1">
-     <widget class="Location" name="widget_2" native="true"/>
-    </item>
-    <item row="1" column="0">
-     <widget class="Location" name="widget_3" native="true"/>
-    </item>
-    <item row="1" column="1">
-     <widget class="Location" name="widget_4" native="true"/>
-    </item>
-   </layout>
-  </widget>
+  <widget class="QWidget" name="map"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <customwidgets>
-  <customwidget>
-   <class>Location</class>
-   <extends>QWidget</extends>
-   <header>location.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
